# keygen-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
doc/: plan.md
scripts/: _gen_resource_stub.sh
skills/keygen/: SKILL.md  install.sh
skills/keygen/examples/: create-license.md  offline-verify.md
skills/keygen/references/: ai-envelope.md  commands.md  installation.md  permissions.md  recipes.md  tui.md
src/: error.rs  exit.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  error.rs  filter_audit.rs  jsonapi.rs  mod.rs  pagination.rs
src/auth/: commands.rs  login.rs  mod.rs  store.rs  token.rs
src/capability/: detect.rs  doctor.rs  env_commands.rs  mod.rs
src/cli/: completion.rs  context.rs  globals.rs  mod.rs  resources.rs
src/config/: commands.rs  file.rs  mod.rs  profile.rs  profile_commands.rs
src/explain/: catalog.rs  commands.rs  mod.rs
src/output/: dispatch.rs  json.rs  mod.rs  ndjson.rs  table.rs  yaml.rs
src/render/: mod.rs  progress.rs  status.rs  time.rs
src/resources/: artifact.rs  common.rs  component.rs  entitlement.rs  event_log.rs  group.rs  license.rs  machine.rs  mod.rs  package.rs  policy.rs  process.rs  product.rs  release.rs  request_log.rs  token.rs  user.rs  webhook.rs
src/schema/: commands.rs  generate.rs  mod.rs
src/tui/: app.rs  mod.rs  permission.rs  state.rs  theme.rs
src/tui/views/: actions.rs  command_palette.rs  detail.rs  events.rs  home.rs  list.rs  mod.rs
src/tui/widgets/: action_menu.rs  command_input.rs  confirm.rs  kv_table.rs  log_viewer.rs  mod.rs  status_pill.rs
src/view/: cards.rs  columns.rs  mod.rs  render.rs  truncate.rs
tests/: api_client.rs
